Merge remote-tracking branch 'origin/main' into logHomeFix